--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-https://keepcarryon.github.io
-hello world!!
-二〇一九年五月三十日 13:43:19
+<html>
+  <head></head>
+  <body>
+    <a href="yutonghai.top/hello">跳转</a>
+    <div id="time"></div>
+  </body>
+<script>
+  (function(){
+     var time = (new Date()).toLocaleString();
+  document.getElementById("time").innerHTML = time
+   })();
+</script>
+</html>
