--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head></head>
   <body>
-    <a href="yutonghai.top/hello">跳转</a>
+    <a href="http://yutonghai.top/hello">跳转</a>
     <div id="time"></div>
   </body>
 <script>
