--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
-  <head></head>
-  <body>
-    <a href="http://yutonghai.top/hello">跳转</a>
-    <div id="time"></div>
-  </body>
+<head></head>
+<body>
+<a href="http://yutonghai.top/hello">跳转</a>
+<div id="time"></div>
+<img src="images/zhangkeming.jpg"/>
+</body>
 <script>
   (function(){
-     var time = (new Date()).toLocaleString();
-  document.getElementById("time").innerHTML = time
-   })();
+    var time = (new Date()).toLocaleString();
+    document.getElementById("time").innerHTML = time
+  })();
 </script>
 </html>
