--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head></head>
 <body>
 <div id="time"></div>
-<img src="images/zhangkeming.jpg" title="张克明提供"/>
+<img src="images/zhangkeming.jpg" title="张克明（三沐）提供"/>
 </body>
 <script>
   (function(){
