提交图片提供者

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-<head></head>
+<head>
+    <title>Stay Hungary</title>
+</head>
 <body>
 <div id="time"></div>
 <img src="images/zhangkeming.jpg" title="张克明（三沐）提供"/>
