--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 
 <body>
-
+<div style="float: right;">
+    <iframe frameborder="0" src="index2.html" width="500px" height="500px" scrolling="no"></iframe>
+</div>
 <div class="container">
 
     <div class="interface">
